Fix some alignments

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -3,8 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .s_article_container {
-  padding-left: 15px;
-  width: 90%;
+  width: 95%;
 
   .article-content {
     margin-left: 30px;
